# software-manager

./: README.md  qt-software-manager-development.md
software-manager/: .gitignore  CMakeLists.txt  LICENSE  build.bat  config.ini  run.bat
software-manager/docs/: user_manual.md
software-manager/resources/: Resources.qrc
software-manager/src/: main.cpp
software-manager/src/core/: CategoryManager.cpp  CategoryManager.hpp  DatabaseManager.cpp  DatabaseManager.hpp  GlobalHotkeyManager.cpp  GlobalHotkeyManager.hpp  SettingsManager.cpp  SettingsManager.hpp  SoftwareScanner.cpp  SoftwareScanner.hpp  SystemTrayManager.cpp  SystemTrayManager.hpp
software-manager/src/model/: SoftwareItem.cpp  SoftwareItem.hpp
software-manager/src/ui/: MainWindow.cpp  MainWindow.hpp  SearchDialog.cpp  SearchDialog.hpp  SettingsDialog.cpp  SettingsDialog.hpp  SidebarWidget.cpp  SidebarWidget.hpp  SoftwareGridView.cpp  SoftwareGridView.hpp  SoftwareItemWidget.cpp  SoftwareItemWidget.hpp  SoftwareListView.cpp  SoftwareListView.hpp
software-manager/src/utils/: IconExtractor.cpp  IconExtractor.hpp  Logging.cpp  Logging.hpp
software-manager/tests/: TestCategoryManager.cpp  TestDatabaseManager.cpp  TestSoftwareItem.cpp  TestSoftwareScanner.cpp
